package services

import (
	"context"
	"fmt"
	"go_chat_backend/models"
	"go_chat_backend/platform/database"
	"go_chat_backend/platform/proto/cognicore"
	"go_chat_backend/repository"
	"strings"
	"sync"
	"time"

	"github.com/lib/pq"
	"github.com/pgvector/pgvector-go"
)

type ChunkService struct {
	chunkRepo    repository.ChunkRepository
	metadataRepo repository.DocumentRepository

	// ä¸ºæ¯ä¸ªæ–‡æ¡£ç»´æŠ¤ç‹¬ç«‹çš„å¤„ç†ä¸Šä¸‹æ–‡
	docContexts map[string]*DocumentProcessContext
	mu          sync.RWMutex
}

// DocumentProcessContext æ¯ä¸ªæ–‡æ¡£çš„å¤„ç†ä¸Šä¸‹æ–‡
type DocumentProcessContext struct {
	FileID   string
	FullText *strings.Builder
	Sections []string
	mu       sync.Mutex
}

func NewChunkService(db *database.DB) *ChunkService {
	return &ChunkService{
		chunkRepo:    repository.NewChunkRepository(db.GetDatabase()),
		metadataRepo: repository.NewDocumentRepository(db.GetDatabase()),
		docContexts:  make(map[string]*DocumentProcessContext),
	}
}

// getOrCreateContext è·å–æˆ–åˆ›å»ºæ–‡æ¡£å¤„ç†ä¸Šä¸‹æ–‡
func (cs *ChunkService) getOrCreateContext(fileID string) *DocumentProcessContext {
	cs.mu.Lock()
	defer cs.mu.Unlock()

	if ctx, exists := cs.docContexts[fileID]; exists {
		return ctx
	}

	ctx := &DocumentProcessContext{
		FileID:   fileID,
		FullText: &strings.Builder{},
		Sections: []string{},
	}
	cs.docContexts[fileID] = ctx
	return ctx
}

// CleanupContext æ¸…ç†æ–‡æ¡£å¤„ç†ä¸Šä¸‹æ–‡
func (cs *ChunkService) CleanupContext(fileID string) {
	cs.mu.Lock()
	defer cs.mu.Unlock()
	delete(cs.docContexts, fileID)
}

// GetSections è·å–æ–‡æ¡£çš„ sections
func (cs *ChunkService) GetSections(fileID string) []string {
	cs.mu.RLock()
	defer cs.mu.RUnlock()

	if ctx, exists := cs.docContexts[fileID]; exists {
		ctx.mu.Lock()
		defer ctx.mu.Unlock()
		// è¿”å›å‰¯æœ¬ï¼Œé¿å…å¤–éƒ¨ä¿®æ”¹
		sections := make([]string, len(ctx.Sections))
		copy(sections, ctx.Sections)
		return sections
	}
	return []string{}
}

func (cs *ChunkService) ProcessDocumentMetadata(metadata *cognicore.DocumentMetadata) error {
	ctx := context.Background()
	now := time.Now()

	// ä¸ºè¿™ä¸ªæ–‡æ¡£åˆ›å»ºå¤„ç†ä¸Šä¸‹æ–‡
	docCtx := cs.getOrCreateContext(metadata.FileId)
	docCtx.mu.Lock()
	docCtx.FullText.WriteString(metadata.Filename)
	docCtx.FullText.WriteString("\n")
	docCtx.mu.Unlock()

	doc := &models.DocumentMeta{
		FileID:          metadata.FileId,
		UserID:          metadata.UserId,
		Filename:        metadata.Filename,
		FileHash:        metadata.FileHash,
		FileSize:        metadata.FileSize,
		TotalPages:      metadata.TotalPages,
		EstimatedChunks: metadata.EstimatedChunks,
		Status:          models.StatusProcessing,
		StartedAt:       &now,
		Sections:        pq.StringArray{}, // åˆå§‹åŒ–ä¸ºç©ºæ•°ç»„
	}

	return cs.metadataRepo.UpdateMetadata(ctx, metadata.FileId, doc)
}
func (cs *ChunkService) ProcessChunk(chunk *cognicore.TextChunk) error {
	ctx := context.Background()

	// ğŸ” DEBUG: Check embedding vector length
	if len(chunk.EmbeddingVector) == 0 {
		return fmt.Errorf("âŒ chunk %d: embedding vector is EMPTY (length=0)", chunk.ChunkIndex)
	}

	// âœ… Clean text to remove NULL bytes (PostgreSQL doesn't allow \x00 in UTF-8)
	cleanedChapter := strings.ReplaceAll(chunk.Chapter, "\x00", "")
	cleanedText := strings.ReplaceAll(chunk.ChunkText, "\x00", "")

	// è·å–æ–‡æ¡£ä¸Šä¸‹æ–‡å¹¶æ›´æ–°
	docCtx := cs.getOrCreateContext(chunk.FileId)
	docCtx.mu.Lock()
	docCtx.FullText.WriteString(cleanedChapter)
	docCtx.FullText.WriteString("\n")
	docCtx.FullText.WriteString(cleanedText)
	docCtx.FullText.WriteString("\n")

	// å»é‡å¹¶æ·»åŠ  section
	if cleanedChapter != "" && !contains(docCtx.Sections, cleanedChapter) {
		docCtx.Sections = append(docCtx.Sections, cleanedChapter)
	}
	docCtx.mu.Unlock()

	chunkRes := &models.Chunk{
		ChunkID:         chunk.ChunkId,
		FileID:          chunk.FileId,
		ChunkIndex:      chunk.ChunkIndex,
		Chapter:         cleanedChapter,
		ChunkText:       cleanedText,
		EmbeddingVector: pgvector.NewVector(chunk.EmbeddingVector),
		CreatedAt:       time.Now(),
	}

	return cs.chunkRepo.Create(ctx, chunkRes)
}

// contains è¾…åŠ©å‡½æ•°ï¼šæ£€æŸ¥å­—ç¬¦ä¸²æ˜¯å¦åœ¨åˆ‡ç‰‡ä¸­
func contains(slice []string, item string) bool {
	for _, s := range slice {
		if s == item {
			return true
		}
	}
	return false
}
